webhooks/mututating webhook/app_7.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: d3
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: c3
        image: arunvel1988/c1
        ports:
        - name: tcp
          containerPort: 8000
