webhooks/mututating webhook/mutuating_admission_webhook_6.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutuating-webhook
  namespace: default
webhooks:
  - name: arunm.default.svc
    failurePolicy: Fail
    clientConfig:
      service:
        name: arunm
        namespace: default
        path: "/mutate/deployments"
 #       path: /validate/deployments
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZDekNDQXZPZ0F3SUJBZ0lKQU95QjZZaW9hdVM0TUEwR0NTcUdTSWIzRFFFQkN3VUFNQnd4R2pBWUJnTlYKQkFNTUVXRnlkVzV0TG1SbFptRjFiSFF1YzNaak1CNFhEVEl3TURjek1URXhOREkwTTFvWERUSXhNRGN5TWpFeApOREkwTTFvd0hERWFNQmdHQTFVRUF3d1JZWEoxYm0wdVpHVm1ZWFZzZEM1emRtTXdnZ0lpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQ0R3QXdnZ0lLQW9JQ0FRRGFGU2hnNHd6NW1maGZ6elM0ZUh0eFZSS0tEOWM3MklqYzI2NWcKTkpmbUd6NitBSWw1SWl3V3RuZkwwYmFWYUl5SXovSm8xOWZsc3Fjb0FOenJGekViZmVBQ3lNRW5EUHZGL21OQgpmSS95UXpQcnZn [...]
    rules:
      - apiGroups: ["apps"]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
